# MyGame

./: CMakeLists.txt
res/shaders/: fShader.txt  vShader.txt
res/shaders/BgShaders/: vShader.txt
res/shaders/ObjectsShaders/: fShader.txt  vShader.txt
src/: main.cpp
src/Background/: Background.cpp  Background.h
src/Camera/: Camera2D.cpp  Camera2D.h
src/Objects/: Background.cpp  Background.h  Object.cpp  Object.h  Persons.cpp  Persons.h
src/Render/: IndexBuff.cpp  IndexBuff.h  Shaders.cpp  Shaders.h  SpriteAnim.cpp  SpriteAnim.h  Texture2D.cpp  Texture2D.h  VertexArr.cpp  VertexArr.h  VertexBuffArr.cpp  VertexBuffArr.h
src/Resources/: Resources.cpp  Resources.h
src/Sprite/: SpriteAnim.h
